# game-launcher

./: todo.txt
flat/: Cargo.toml
flat/src/: experiment.rs  lib.rs
main/: .gitignore  Cargo.toml  build.rs  config.yaml  dist.sh
main/src/: flat_data.rs  hook.rs  index.rs  lnk.rs  main.rs
main/src/browser/: mod.rs
main/src/common/: dllimport.rs  ico.rs  mod.rs
main/src/ntfs/: aligned.rs  attributes.rs  file_record.rs  mod.rs
main/src/render/: assets.rs  cef_image.rs  mod.rs
main/src/render/search/: assets.rs  config.rs  mod.rs
main/src/render/search/appx/: mod.rs
main/src/render/search/start_menu/: lnk.rs  mod.rs
main/src/render/search/steam/: mod.rs  vdf_binary.rs  vdf_text.rs
render/: package.json
render/public/: index.html
render/src/: App.vue  Result.vue  app.js  common.scss
render/src/assets/: fonts.scss
testing/: Cargo.toml  out.txt
testing/src/: main.rs  read_dir_recursive.rs
ui/: package.json  vue.config.js
ui/public/: index.html
ui/src/: App.vue  Result.vue  app.js  common.scss  main.js
