[package]
name = "main"
version = "0.1.0"
authors = ["Max Froehlich <max@mfro.me>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
base64 = "0.13.0"
bitflags = "1.2.1"
cef = { path = "../../cerium-trifluoride/cef" }
com = "0.2"
flat = { path = "../flat" }
image = "0.23"
lazy_static = "1.4.0"
mime_guess = "2.0.3"
percent-encoding = "2.1.0"
quick-xml = { version = "0.19.0", features = ["serialize"] }
serde = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
winapi = { version = "0.3.9", features = [
    "winuser",
    "uxtheme",
    "dwmapi",
    "libloaderapi",
    "shlobj",
    "processenv",
    "shellapi",
    "ioapiset",
    "winioctl",
    "objbase",
] }
winrt = "0.7"

[build-dependencies]
winrt = "0.7"
