[package]
name = "testing"
version = "0.1.0"
authors = ["Max Froehlich <max@mfro.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flat = { path = "../flat" }
image = "0.23"

[patch.crates-io]
image = { path = "../image" }
